--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,18 +1,23 @@
-!!!
+!!!  
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }/
     %title Event Manager
-    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
+    %meta{ :content => "width=device-width, initial-scale=1", :name => "viewport" }
     = csrf_meta_tags
     = csp_meta_tag
+
+    / Bootstrap CSS CDN
+    %link{ :href => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", :rel => "stylesheet", :integrity => "sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH", :crossorigin => "anonymous" }
+    
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_pack_tag 'application'
+
   %body
     %nav.navbar.navbar-expand-lg.navbar-light.bg-light
       .container-fluid
-        %a.navbar-brand{:href => "/"} Event Manager
-        %button.navbar-toggler{"aria-controls" => "navbarNav", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-bs-target" => "#navbarNav", "data-bs-toggle" => "collapse", :type => "button"}
+        %a.navbar-brand{ :href => "/" } Event Manager
+        %button.navbar-toggler{ :type => "button", "data-bs-toggle" => "collapse", "data-bs-target" => "#navbarNav", "aria-controls" => "navbarNav", "aria-expanded" => "false", "aria-label" => "Toggle navigation" }
           %span.navbar-toggler-icon
         #navbarNav.collapse.navbar-collapse
           %ul.navbar-nav.ms-auto
@@ -30,3 +35,6 @@
                 = link_to 'Sign Up', new_user_registration_path, class: 'nav-link'
     .container.mt-4
       = yield
+
+    / Bootstrap JS Bundle CDN
+    %script{ :src => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js", :integrity => "sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz", :crossorigin => "anonymous" }
